--- a/finddup/src/main/webapp/resources/css/screen.css
+++ b/finddup/src/main/webapp/resources/css/screen.css
@@ -9,7 +9,7 @@ body {
    margin: 0 auto;
    padding: 0 20px 10px 20px;
    border: 1px solid #666666;
-   width: 865px; /* subtract 40px from banner width for padding */
+   /*width: 865px; /* subtract 40px from banner width for padding */
    background: #FFFFFF url(#{request.contextPath}/resources/gfx/banner.png) no-repeat;
    padding-top: 110px;
 }
